Support empty consumer group id
Signed-off-by: Michael Edgar <medgar@redhat.com>